fixing homepage hero spacing

--- a/app/assets/stylesheets/templates/_homepage.scss
+++ b/app/assets/stylesheets/templates/_homepage.scss
@@ -6,12 +6,17 @@
   }
 
   .main-header {
-    position: relative;
+    position: absolute;
+    left: $s15;
+    right: $s15;
+
+    @include media($tablet-up) {
+      left: $s35;
+      right: $s35;
+    }
     background: linear-gradient(0, rgba($color-grey-darkest, 0) 0%, rgba($color-grey-darkest, .5) 99%);
     border: 0;
     z-index: 2;
-    padding-bottom: $s95;
-    margin-bottom: -9rem;
     overflow: visible;
     .toolbar__item {
       color: #fff;
@@ -33,7 +38,7 @@
     color: #FFFFFF;
 
       padding: {
-        top: $s155;
+        top: $s95+$s35;
         bottom: $s95;
       }
 
@@ -44,18 +49,18 @@
     // Note: The h2 is actually first and more prominent, for seo-y reasons.
     h2 {
       max-width: 10em;
-      font-size: 3.6rem;
-      line-height: 1.3em;
-      font-weight: 600;
+      font-size: $font-size-60;
+      line-height: $s60;
+      font-weight: 700;
       margin-top: 0em;
-      margin-bottom: .5em;
+      margin-bottom: $s25;
     }
 
     h1 {
-      margin-bottom: 2em;
-      font-weight: 500;
-      font-size: inherit;
-      line-height: inherit;
+      margin-bottom: $s60;
+      font-weight: 600;
+      font-size: $font-size-25;
+      line-height: $s25;
       margin-top: 0;
     }
 
